# inference_engine

./: .gitignore  CMakeLists.txt  LICENSE  test.cpp
include/hermes/: Tensor.h  kernels.h  model.h  ops.h  utils.h
scripts/: run_gpt2.py  save_gpt.py
src/: Tensor.cpp  kernels.cpp  model.cpp  ops.cpp  utils.cpp
tests/: kernels_test.cpp  model_test.cpp  ops_test.cpp  tensor_test.cpp  test_utils.h
tests/scripts/: kernel_data.py  model_data.py
